--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
   <body>
     <div class="container">
-        <img src="https://images.unsplash.com/photo-1669023414166-a4cc7c0fe1f5?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NjB8fFByb2dyYW1taW5nJTIwbGFuZ3V8ZW58MHx8MHx8fDA%3D"  width="30%" height="50%" >
+        <img src="https://images.unsplash.com/photo-1669023414166-a4cc7c0fe1f5?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NjB8fFByb2dyYW1taW5nJTIwbGFuZ3V8ZW58MHx8MHx8fDA%3D"  width="500" height="50%" alt="Image" >
       </div>
     
 
