--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Qamraa Almutairi</title>
+    <title>My-CV</title>
 
 </head>
   <body>
     <div class="container">
         <img src="https://images.unsplash.com/photo-1669023414166-a4cc7c0fe1f5?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NjB8fFByb2dyYW1taW5nJTIwbGFuZ3V8ZW58MHx8MHx8fDA%3D"  width="500" height="50%" alt="Image" >
       </div>
+      <h1>Qamraa Almutairi</h1>
+
+      <h2>Computer Science</h2>
     
 
 </body>
