--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <h1>Qamraa Almutairi</h1>
 
       <h2>Computer Science</h2>
+
+      <p>I have a degree in Computer Science from Imam Muhammad ibn Saud University. I am particularly interested in building user interfaces.</p>
     
 
 </body>
