--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 
       <p>I have a degree in Computer Science from Imam Muhammad ibn Saud University. I am particularly interested in building user interfaces.</p>
     
+      <ul>  
+        <li>Email: <a href="mailto:qamra.abdulrahman@gmail.com">qamra.abdulrahman@gmail.com</a></li>  
+        <li><a href="https://linkedin.com/in/qamra-almutairi" target="_blank">LinkedIn</a></li>
+        <li><a href="https://github.com/AGamra" target="_blank">GitHub</a></li>
+    </ul> 
 
 </body>
 </html>
