--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
         <li><a href="https://github.com/AGamra" target="_blank">GitHub</a></li>
     </ul> 
 
+    <h2>Proficient programming languagese</h2>
 </body>
 </html>
