--- a/index.html
+++ b/index.html
@@ -23,5 +23,28 @@
     </ul> 
 
     <h2>Proficient programming languagese</h2>
+
+    <table> 
+        <tr>
+            <th>Programming language</th>
+            <th>Experience level</th>
+        </tr>
+
+        <tr>
+            <td>java</td>
+            <td>Intermediate</td>
+        </tr>
+        <tr>
+            <td>Python</td>
+            <td>Intermediate</td>
+        </tr>
+        <tr>
+            <td>javaScript</td>
+            <td>Intermediate</td>
+        </tr>
+        <tr>
+            <td>Html</td>
+            <td>expert</td>
+        </tr>
 </body>
 </html>
